Fix SonarQube MAJOR/CRITICAL issues: JPA no-arg ctors, array-field records, lambda exception assertions, Collectors.toList(), conditional logging
- S1186 (empty method): document the required JPA/Hibernate no-arg
  constructor on all 9 JPA entities instead of leaving it unexplained.
- S6218 (array equals/hashCode/toString): give the 6 upload/replace
  Command records with a byte[] field real content-based equals/hashCode
  (java.util.Arrays) and a length-summarizing toString instead of the
  default reference-identity/dump behavior.
- S6204 (Stream.collect(Collectors.toList())): switch to Stream.toList()
  in CampaignPersistenceAdapter/BrandingAssetPersistenceAdapter; verified
  none of the three call sites relies on a mutable list (Campaign.reconstitute
  already defensively copies into a new ArrayList).
- S2629 (conditionally-invoked method): guard the debug log in
  CampaignEventRateLimitFilter with isDebugEnabled() and compute the
  client key once instead of twice.
- S5778 (lambda with more than one throwing invocation): across the
  Campaign/CampaignScreen/CampaignMediaAsset domain tests and the
  Upload/Add/Remove/Publish/Delete/Save/Update service tests, hoist
  command/draft/id construction out of the assertThatThrownBy lambda so
  only the call under test remains inside it.

Skipped (judgment calls, documented per task instructions):
- S107 (too many constructor/method parameters), 17 occurrences across
  Campaign, CampaignScreen, CampaignMediaAsset, AboutPage,
  HomeFeaturedPlayerConfig, AppConfig, BrandingAsset: this is this
  repo's established aggregate reconstitute()/create() pattern (see
  CLAUDE.md); introducing a builder/parameter object would ripple through
  every persistence adapter and test call site for no behavioral gain and
  real risk of transposing positional args.
- S4502 (CSRF disabled) in SecurityConfig: this is a stateless, bearer-JWT
  OAuth2 resource server (SessionCreationPolicy.STATELESS, no cookies), so
  CSRF protection does not 