@@ -7,7 +7,6 @@ import org.springframework.stereotype.Component;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Component
 public class BrandingAssetPersistenceAdapter implements BrandingAssetRepositoryPort {
@@ -36,7 +35,7 @@ public class BrandingAssetPersistenceAdapter implements BrandingAssetRepositoryP
 
     @Override
     public List<BrandingAsset> findAll() {
-        return jpaRepository.findAll().stream().map(this::toDomain).collect(Collectors.toList());
+        return jpaRepository.findAll().stream().map(this::toDomain).toList();
     }
 
     @Override
